@@ -652,6 +652,9 @@ Release 0.23.0 - Unreleased
 
     HADOOP-7715. Removed unnecessary security logger configuration. (Eric Yang)
 
+    HADOOP-7685. Improved directory ownership check function in 
+    hadoop-setup-conf.sh. (Eric Yang)
+
 Release 0.22.0 - Unreleased
 
   INCOMPATIBLE CHANGES
